Add unit tests for MovieService, RoomService, ScreeningService, and TmdbService.